--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "ts-node": "^10.9.1",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "ahooks": "^3.7.11"
   }
 }
