--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "ahooks": "^3.7.11"
+    "ahooks": "^3.7.11",
+    "classnames": "^2.5.1",
+    "lodash-es": "^4.17.21",
+    "sass": "^1.77.2"
   }
 }
